--- a/BuildConfig.json
+++ b/BuildConfig.json
@@ -9,4 +9,6 @@
   },
   "GOOGLE_SIGN_IN_WEB_CLI_ID": "<MY_GOOGLE_SIGN_IN_WEB_CLI_ID>",
   "uniqueIds": ["<UNIQUE_IDS>"],
+  "TWITTER_CONSUMER_KEY": "<MY_TWITTER_CONSUMER_KEY>",
+  "TWITTER_CONSUMER_SECRET": "<My_TWITTER_CONSUMER_SECRET>"
 }
