--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,5 @@
+include ':react-native-twitter-signin'
+project(':react-native-twitter-signin').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-twitter-signin/android')
 rootProject.name = 'cybavo_wallet'
 include ':react-native-version-number'
 project(':react-native-version-number').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-version-number/android')
