--- a/ios/cybavo_wallet/Info.plist
+++ b/ios/cybavo_wallet/Info.plist
@@ -44,7 +44,17 @@
 				<string>MY_LINE_CHANNEL_SCHEME</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>twitterkit-MY_TWITTER_COMSUMER_KEY</string>
+			</array>
+		</dict>
 	</array>
+	<key>CFBundleVersion</key>
+	<string>1</string>
 	<key>FacebookAppID</key>
 	<string>MY_FACEBOOK_SIGN_IN_APP_ID</string>
 	<key>FacebookDisplayName</key>
@@ -52,6 +62,8 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>lineauth2</string>
+		<string>twitterauth</string>
+		<string>twitter</string>
 		<string>fbapi</string>
 		<string>fbapi20130214</string>
 		<string>fbapi20130410</string>
@@ -69,8 +81,6 @@
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
 	</array>
-	<key>CFBundleVersion</key>
-	<string>1</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
