--- a/ios/Podfile
+++ b/ios/Podfile
@@ -61,6 +61,8 @@ target 'cybavo_wallet' do
   pod 'ReactNativeFabric', :path => '../node_modules/react-native-fabric'
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
+  pod 'react-native-twitter-signin', :path => '../node_modules/react-native-twitter-signin'
+
   pre_install do |installer|
     # workaround for https://github.com/CocoaPods/CocoaPods/issues/3289
     Pod::Installer::Xcode::TargetValidator.send(:define_method, :verify_no_static_framework_transitive_dependencies) {}
