--- a/package.json
+++ b/package.json
@@ -28,16 +28,30 @@
     "@react-native-firebase/crashlytics": "^6.7.1",
     "@react-native-firebase/iid": "^6.2.0",
     "@react-native-firebase/messaging": "^6.7.1",
+    "@tradle/react-native-http": "^2.0.1",
     "@types/react-native-snap-carousel": "^3.7.4",
+    "assert": "^1.5.0",
     "bignumber.js": "^9.0.0",
+    "browserify-zlib": "^0.1.4",
+    "buffer": "^4.9.2",
+    "console-browserify": "^1.2.0",
+    "constants-browserify": "^1.0.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.2.0",
+    "events": "^1.1.1",
+    "https-browserify": "0.0.1",
     "jimp": "^0.12.1",
     "jsqr": "^1.3.1",
     "moment": "^2.24.0",
     "native-base": "2.13.12",
+    "path-browserify": "0.0.0",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
     "react": "16.9.0",
     "react-content-loader": "^5.0.4",
     "react-native": "0.61.4",
     "react-native-camera": "^3.11.1",
+    "react-native-crypto": "^2.2.0",
     "react-native-device-info": "^5.6.1",
     "react-native-fbsdk": "^2.0.0",
     "react-native-fs": "^2.16.6",
@@ -46,20 +60,26 @@
     "react-native-i18n": "^2.0.15",
     "react-native-image-picker": "^2.3.1",
     "react-native-indicators": "^0.17.0",
+    "react-native-level-fs": "^3.0.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.3",
+    "react-native-os": "^1.2.6",
     "react-native-paper": "^3.4.0",
     "react-native-permissions": "^2.1.2",
     "react-native-progress": "^4.1.2",
     "react-native-push-notification": "^3.1.9",
     "react-native-qrcode-scanner": "^1.3.1",
     "react-native-qrcode-svg": "^6.0.3",
+    "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-svg": "^12.1.0",
+    "react-native-tcp": "^3.3.2",
+    "react-native-twitter-signin": "^1.1.1",
+    "react-native-udp": "^2.7.0",
     "react-native-vector-icons": "6.6.0",
     "react-native-version-number": "^0.3.6",
     "react-native-webview": "^9.2.1",
@@ -68,10 +88,18 @@
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.0",
     "react-redux": "^7.1.3",
+    "readable-stream": "^1.0.33",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "^0.10.31",
+    "timers-browserify": "^1.4.2",
+    "tty-browserify": "0.0.0",
+    "url": "^0.10.3",
+    "util": "^0.10.4",
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -98,5 +126,57 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
   }
 }
