--- a/BuildConfig.json
+++ b/BuildConfig.json
@@ -10,5 +10,6 @@
   "GOOGLE_SIGN_IN_WEB_CLI_ID": "<MY_GOOGLE_SIGN_IN_WEB_CLI_ID>",
   "uniqueIds": ["<UNIQUE_IDS>"],
   "TWITTER_CONSUMER_KEY": "<MY_TWITTER_CONSUMER_KEY>",
-  "TWITTER_CONSUMER_SECRET": "<My_TWITTER_CONSUMER_SECRET>"
+  "TWITTER_CONSUMER_SECRET": "<My_TWITTER_CONSUMER_SECRET>",
+  "CHAIN_ID": 1
 }
