--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "https-browserify": "0.0.1",
     "jimp": "^0.12.1",
     "jsqr": "^1.3.1",
+    "jstransformer": "^1.0.0",
     "moment": "^2.24.0",
     "native-base": "2.13.12",
     "path-browserify": "0.0.0",
@@ -50,7 +51,7 @@
     "querystring-es3": "^0.2.1",
     "react": "16.9.0",
     "react-content-loader": "^5.0.4",
-    "react-native": "0.61.4",
+    "react-native": "^0.63.3",
     "react-native-camera": "^3.11.1",
     "react-native-crypto": "^2.2.0",
     "react-native-device-info": "^5.6.1",
@@ -104,12 +105,12 @@
     "vm-browserify": "0.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/runtime": "^7.7.2",
-    "@react-native-community/eslint-config": "^0.0.5",
+    "@babel/core": "^7.11.1",
+    "@babel/runtime": "^7.11.2",
+    "@react-native-community/eslint-config": "^1.1.0",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.6.0",
+    "babel-jest": "^25.5.1",
+    "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-plugin-flowtype": "^4.4.1",
     "eslint-plugin-import": "^2.18.2",
@@ -117,14 +118,14 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "jest": "^24.9.0",
-    "metro": "^0.57.0",
-    "metro-core": "^0.57.0",
-    "metro-react-native-babel-preset": "^0.57.0",
+    "jest": "^25.5.4",
+    "metro": "^0.63.0",
+    "metro-core": "^0.61.0",
+    "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^1.19.1",
     "react-native-fabric": "^0.5.2",
     "react-native-push-notification": "^3.1.9",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.13.1"
   },
   "jest": {
     "preset": "react-native"
