--- a/ios/Podfile
+++ b/ios/Podfile
@@ -101,6 +101,12 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
+      # Required from CYBAVOWallet 1.2.497
+      # installer.pods_project.targets.each do |target|
+      #   target.build_configurations.each do |config|
+      #       config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+      #   end
+      # end
       if target.name == 'yoga'
           target.build_configurations.each do |config|
               config.build_settings['GCC_TREAT_WARNINGS_AS_ERRORS'] = 'NO'
